# redkb

./: .bumpversion.toml  .env.example  .envrc  .gitignore  .mise.toml  .readthedocs.yaml  404.html  Dockerfile  README.md  compose.yml  dev.Caddyfile  dev.docker-compose.yml  docker-compose.yml  en.search-data.json  en.search.min.5e8d653a471ccea31574fcc5e8a9ed52332cf30d3ca521f2ba889a7f75aeaea8.js  en.search.min.bcd61a32f70e5f9ebdd325c6d8b7543baf5376788a099861923ce7eab5b98850.js  go.mod  go.sum  hugo.yml  index.html  index.xml  mkdocs.yml  noxfile.example.py  noxfile.py  pyproject.toml  renovate.json  sitemap.xml  tags.html  vscode.Dockerfile
.archive/: .envrc  .readthedocs.yaml
.archive/containers/: Dockerfile  dev.compose.yml
.archive/docs/: index.md
.archive/includes/: abbreviations.md
.archive/scripts/: start_dev_server.py
.containers/dev/: .env.example  compose.yml
.containers/prod/: .env.example  Caddyfile  Dockerfile  compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: bump-depends.yml  deploy-gh-pages.yml  deploy-gh-pages.yml.disabled  deploy_docs.yml  hugo-build.yml  hugo-main.yml  hugo-publish.yml  hugo-release.yml  hugo-tag.yml  hugo-version-bump.yml  renovate.yml  update-lastmod.yml
archetypes/: default.md  devops.md  github.md  snippets.md
archives/: index.html  index.xml
categories/: index.html  index.xml
containers/: .env.example  Dockerfile  README.md  dev.compose.yml  dev.docker-compose.yml  docker-compose.yml  generate_ssl_certificates.sh  vscode.Dockerfile  web-edit.compose.yml  web-edit.docker-compose.yml
containers/nginx/: nginx.conf
containers/overlays/: web-edit.yml
content/: _index.md
content/archives/: _index.md
content/docs/: _index.md
content/glossary/: _index.en.md
content/snippets/: _index.md
css/: custom.css
css/compiled/: main.min.d87b9392db0d08de283412d779b44f19e8822f93cf69e6fb9911923c6e71c20d.css
data/en/: termbase.yml
docs/: README.md  RELEASES.md  index.html  index.md  index.xml
docs/development/: README.md
docs/devops/: index.html  index.md  index.xml
docs/linux/: index.html  index.md  index.xml
docs/programming/: index.html  index.md  index.xml
docs/template/: index.md
docs/utilities/: index.html  index.md  index.xml  ssh.md
docs/windows/: index.html  index.md  index.xml
glossary/: index.html  index.xml
i18n/: en.yml
includes/: abbreviations.md
linux/: index.html
linux/Tips & Tricks/: index.html
linux/bash/: index.html
linux/deb_family/: index.html  networking.html
programming/: index.html
programming/VSCode/: ad-hoc-codecell.html  import-export-extensions.html  index.html  settings-workspaces.html  settings.json.html
programming/bash/: index.html
programming/docker/: docker_cli.html  docker_compose.html  index.html  tips_tricks.html  writing_dockerfiles.html
programming/git/: git_scripts.html  index.html  rewrite_git_history.html  sparse_checkout.html
programming/jupyter/: index.html
programming/mkdocs/: index.html
programming/powershell/: index.html  profiles.html  snippets.html
programming/python/: ad-hoc-codecell.html  dataclasses.html  fastapi.html  index.html  logging.html  package_imports.html  pdm.html  project_structure.html  pyenv.html  rich.html  sqlalchemy.html  virtualenv.html
programming/readthedocs/: index.html
programming/standard-project-files/: index.html
requirements/: requirements.dev.txt  requirements.txt
scripts/: bump_packages.sh  export_requirements.sh  generate_ssl_certificates.sh
scripts/clean/: fix_md_files.py  remove_linenums_from_singleline_codefence.py  remove_linenums_from_singleline_codefences.sh
scripts/hugo/: build.sh  new-page.sh  serve.sh  update_lastmod_time.py
scripts/versioning/: bump-site-version.sh
search/: search_index.json
snippets/: index.html  index.md  index.xml
snippets/Bash Snippets/: index.html
snippets/Powershell Snippets/: index.html
snippets/Python Snippets/: index.html
snippets/bash/: index.html  index.md  index.xml
snippets/curl-reference/: index.html  index.md  index.xml
snippets/powershell/: index.html  index.md  index.xml
snippets/python/: index.html  index.md  index.xml
tags/: index.html  index.xml
tags/ai/: index.html  index.xml
tags/alacritty/: index.html  index.xml
tags/alembic/: index.html  index.xml
tags/ansible/: index.html  index.xml
tags/arch/: index.html  index.xml
tags/backup/: index.html  index.xml
tags/bash/: index.html  index.xml
tags/cheatsheet/: index.html  index.xml
tags/ci-cd/: index.html  index.xml
tags/curl/: index.html  index.xml
tags/database/: index.html  index.xml
tags/debian/: index.html  index.xml
tags/devops/: index.html  index.xml
tags/docker/: index.html  index.xml
tags/docker-compose/: index.html  index.xml
tags/docs/: index.html  index.xml
tags/dynaconf/: index.html  index.xml
tags/fastapi/: index.html  index.xml
tags/fedora/: index.html  index.xml
tags/file-transfer/: index.html  index.xml
tags/firewall/: index.html  index.xml
tags/formatting/: index.html  index.xml
tags/git/: index.html  index.xml
tags/github/: index.html  index.xml
tags/ide/: index.html  index.xml
tags/jupyter/: index.html  index.xml
tags/linting/: index.html  index.xml
tags/linux/: index.html  index.xml
tags/llm/: index.html  index.xml
tags/logrotate/: index.html  index.xml
tags/logs/: index.html  index.xml
tags/minio/: index.html  index.xml
tags/networking/: index.html  index.xml
tags/nox/: index.html  index.xml
tags/ntfy/: index.html  index.xml
tags/ollama/: index.html  index.xml
tags/one-liners/: index.html  index.xml
tags/package-manager/: index.html  index.xml
tags/pdm/: index.html  index.xml
tags/powershell/: index.html  index.xml
tags/pre-commit/: index.html  index.xml
tags/pytest/: index.html  index.xml
tags/python/: index.html  index.xml
tags/readthedocs/: index.html  index.xml
tags/reference/: index.html  index.xml
tags/restic/: index.html  (+1 more)
template/: index.html
templates/: README.md
test_docs/: doc.md
utilities/: index.html
windows/: index.html
(+780 files in other folders)
