[project]
name = "redkb"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "redjax", email = "none@none.com" }]
dependencies = [
    "mkdocs>=1.5.3",
    "pygments>=2.17.2",
    "mkdocs-material>=9.5.9",
    "markdown-include>=0.8.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-autorefs>=0.5.0",
    "mkdocs-section-index>=0.3.8",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-rss-plugin>=1.12.0",
    "mkdocs-glightbox>=0.3.7",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.3.0",
    "ruff>=0.2.1",
    "nox>=2023.4.22",
    "pre-commit>=3.6.1",
    "pdm-bump>=0.7.3",
]

[tool.pdm.scripts]

mkdocs-deploy = { cmd = "mkdocs gh-deploy" }
mkdocs-serve = { cmd = "mkdocs serve --dev-addr 0.0.0.0:8000" }
